@@ -1,60 +1,28 @@
 package dev.xpple.seedmapper.command.commands;
 
-import com.google.common.collect.Iterables;
+import com.github.cubiomes.CubiomesHeaders;
+import com.github.cubiomes.Generator;
+import com.github.cubiomes.Pos;
+import com.github.cubiomes.StructureConfig;
 import com.mojang.brigadier.Command;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import com.seedfinding.mcbiome.biome.Biome;
-import com.seedfinding.mcbiome.source.BiomeSource;
-import com.seedfinding.mccore.rand.ChunkRand;
-import com.seedfinding.mccore.rand.seed.WorldSeed;
-import com.seedfinding.mccore.state.Dimension;
-import com.seedfinding.mccore.util.data.Pair;
-import com.seedfinding.mccore.util.data.SpiralIterator;
-import com.seedfinding.mccore.util.data.Triplet;
-import com.seedfinding.mccore.util.pos.BPos;
-import com.seedfinding.mccore.util.pos.CPos;
-import com.seedfinding.mccore.util.pos.RPos;
-import com.seedfinding.mcfeature.Feature;
-import com.seedfinding.mcfeature.decorator.Decorator;
-import com.seedfinding.mcfeature.decorator.DesertWell;
-import com.seedfinding.mcfeature.decorator.EndGateway;
-import com.seedfinding.mcfeature.loot.ChestContent;
-import com.seedfinding.mcfeature.loot.ILoot;
-import com.seedfinding.mcfeature.loot.item.Item;
-import com.seedfinding.mcfeature.misc.SlimeChunk;
-import com.seedfinding.mcfeature.structure.Mineshaft;
-import com.seedfinding.mcfeature.structure.RegionStructure;
-import com.seedfinding.mcfeature.structure.RuinedPortal;
-import com.seedfinding.mcfeature.structure.Stronghold;
-import com.seedfinding.mcfeature.structure.Structure;
-import com.seedfinding.mcfeature.structure.generator.Generator;
-import com.seedfinding.mcfeature.structure.generator.Generators;
-import com.seedfinding.mcterrain.TerrainGenerator;
 import dev.xpple.seedmapper.command.CommandExceptions;
 import dev.xpple.seedmapper.command.CustomClientCommandSource;
-import dev.xpple.seedmapper.util.features.FeatureFactory;
-import dev.xpple.seedmapper.util.features.Features;
 import net.fabricmc.fabric.api.client.command.v2.FabricClientCommandSource;
 import net.minecraft.core.BlockPos;
 import net.minecraft.network.chat.Component;
+import net.minecraft.util.RandomSource;
+import net.minecraft.world.level.ChunkPos;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.levelgen.WorldgenRandom;
 
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.util.function.Supplier;
 
-import static com.mojang.brigadier.arguments.IntegerArgumentType.*;
-import static dev.xpple.seedmapper.command.CommandExceptions.*;
 import static dev.xpple.seedmapper.command.arguments.BiomeArgument.*;
-import static dev.xpple.seedmapper.command.arguments.DecoratorFactoryArgument.*;
-import static dev.xpple.seedmapper.command.arguments.EnchantedItemPredicateArgument.*;
-import static dev.xpple.seedmapper.command.arguments.StructureFactoryArgument.*;
+import static dev.xpple.seedmapper.command.arguments.StructureArgument.*;
 import static dev.xpple.seedmapper.util.ChatBuilder.*;
 import static net.fabricmc.fabric.api.client.command.v2.ClientCommandManager.*;
 
@@ -67,331 +35,149 @@ public class LocateCommand {
                     .executes(ctx -> locateBiome(CustomClientCommandSource.of(ctx.getSource()), getBiome(ctx, "biome")))))
             .then(literal("feature")
                 .then(literal("structure")
-                    .then(argument("structure", structureFactory())
-                        .executes(ctx -> locateStructure(CustomClientCommandSource.of(ctx.getSource()), getStructureFactory(ctx, "structure")))))
-                .then(literal("decorator")
-                    .then(argument("decorator", decoratorFactory())
-                        .executes(ctx -> locateDecorator(CustomClientCommandSource.of(ctx.getSource()), getDecoratorFactory(ctx, "decorator")))))
+                    .then(argument("structure", structure())
+                        .executes(ctx -> locateStructure(CustomClientCommandSource.of(ctx.getSource()), getStructure(ctx, "structure")))))
                 .then(literal("slimechunk")
-                    .executes(ctx -> locateSlimeChunk(CustomClientCommandSource.of(ctx.getSource())))))
-            .then(literal("loot")
-                .then(argument("amount", integer(1))
-                    .then(argument("item", enchantedItem().loot())
-                        .executes(ctx -> locateLoot(CustomClientCommandSource.of(ctx.getSource()), getInteger(ctx, "amount"), getEnchantedItem(ctx, "item")))))));
+                    .executes(ctx -> locateSlimeChunk(CustomClientCommandSource.of(ctx.getSource()))))));
     }
 
-    private static int locateBiome(CustomClientCommandSource source, Biome biome) throws CommandSyntaxException {
-        BiomeSource biomeSource = BiomeSource.of(source.getDimension(), source.getVersion(), source.getSeed().getSecond());
-        if (biome.getDimension() != biomeSource.getDimension()) {
-            throw INVALID_DIMENSION_EXCEPTION.create();
-        }
+    private static int locateBiome(CustomClientCommandSource source, int biome) throws CommandSyntaxException {
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment generator = Generator.allocate(arena);
+            CubiomesHeaders.setupGenerator(generator, source.getVersion(), 0);
+            CubiomesHeaders.applySeed(generator, source.getDimension(), source.getSeed().getSecond());
 
-        BlockPos center = BlockPos.containing(source.getPosition());
-        BPos biomePos = locateBiome(biome::equals, new BPos(center.getX(), 0, center.getZ()), 6400, 8, biomeSource);
+            BlockPos center = BlockPos.containing(source.getPosition());
 
-        if (biomePos == null) {
-            throw NO_BIOME_FOUND_EXCEPTION.create(biome.getName());
-        }
-
-        source.sendFeedback(chain(
-            highlight(Component.translatable("command.locate.biome.foundAt", biome.getName())),
-            highlight(" "),
-            copy(
-                hover(
-                    accent("x: " + biomePos.getX() + ", z: " + biomePos.getZ()),
-                    base(Component.translatable("command.locate.biome.copy", biome.getName()))
-                ),
-                String.format("%d ~ %d", biomePos.getX(), biomePos.getZ())
-            ),
-            highlight(".")
-        ));
-        return Command.SINGLE_SUCCESS;
-    }
-
-    private static BPos locateBiome(Predicate<Biome> predicate, BPos center, int radius, int increment, BiomeSource biomeSource) {
-        SpiralIterator<BPos> spiralIterator = new SpiralIterator<>(center, new BPos(radius, 0, radius), increment, BPos::new);
-        return StreamSupport.stream(spiralIterator.spliterator(), false)
-            .filter(bPos -> predicate.test(biomeSource.getBiome(bPos)))
-            .findAny().orElse(null);
-    }
-
-    private static int locateStructure(CustomClientCommandSource source, FeatureFactory<? extends Structure<?, ?>> structureFactory) throws CommandSyntaxException {
-        final Structure<?, ?> structure = structureFactory.create(source.getVersion());
-
-        BiomeSource biomeSource = BiomeSource.of(source.getDimension(), source.getVersion(), source.getSeed().getSecond());
-        if (!structure.isValidDimension(biomeSource.getDimension())) {
-            throw INVALID_DIMENSION_EXCEPTION.create();
-        }
-
-        BlockPos center = BlockPos.containing(source.getPosition());
-        BPos structurePos = locateStructure(structure, new BPos(center.getX(), center.getY(), center.getZ()), 6400, new ChunkRand(), biomeSource, TerrainGenerator.of(biomeSource));
-
-        if (structurePos == null) {
-            throw CommandExceptions.NO_STRUCTURE_FOUND_EXCEPTION.create(structure.getName());
-        }
-
-        source.sendFeedback(chain(
-            highlight(Component.translatable("command.locate.feature.structure.foundAt", structure.getName())),
-            highlight(" "),
-            copy(
-                hover(
-                    accent("x: " + structurePos.getX() + ", z: " + structurePos.getZ()),
-                    base(Component.translatable("command.locate.feature.structure.copy", structure.getName()))
-                ),
-                String.format("%d ~ %d", structurePos.getX(), structurePos.getZ())
-            ),
-            highlight(".")
-        ));
-        return Command.SINGLE_SUCCESS;
-    }
-
-    private static BPos locateStructure(Structure<?, ?> structure, BPos center, int radius, ChunkRand chunkRand, BiomeSource source, TerrainGenerator terrainGenerator) {
-        if (structure instanceof RegionStructure<?, ?> regionStructure) {
-            int chunkInRegion = regionStructure.getSpacing();
-            int regionSize = chunkInRegion * 16;
-
-            final int border = Level.MAX_LEVEL_SIZE;
-            SpiralIterator<RPos> spiralIterator = new SpiralIterator<>(center.toRegionPos(regionSize), new BPos(-border, 0, -border).toRegionPos(regionSize), new BPos(border, 0, border).toRegionPos(regionSize), 1, (x, y, z) -> new RPos(x, z, regionSize));
-            return StreamSupport.stream(spiralIterator.spliterator(), false)
-                .map(rPos -> regionStructure.getInRegion(source.getWorldSeed(), rPos.getX(), rPos.getZ(), chunkRand))
-                .filter(Objects::nonNull)
-                .filter(cPos -> (regionStructure.canSpawn(cPos, source)) && (terrainGenerator == null || regionStructure.canGenerate(cPos, terrainGenerator)))
-                .findAny().map(cPos -> cPos.toBlockPos().add(9, 0, 9)).orElse(null);
-        } else {
-            if (structure instanceof Stronghold strongholdStructure) {
-                CPos currentChunkPos = center.toChunkPos();
-                int squaredDistance = Integer.MAX_VALUE;
-                CPos closest = new CPos(0, 0);
-                for (CPos stronghold : strongholdStructure.getAllStarts(source, chunkRand)) {
-                    int newSquaredDistance = (currentChunkPos.getX() - stronghold.getX()) * (currentChunkPos.getX() - stronghold.getX()) + (currentChunkPos.getZ() - stronghold.getZ()) * (currentChunkPos.getZ() - stronghold.getZ());
-                    if (newSquaredDistance < squaredDistance) {
-                        squaredDistance = newSquaredDistance;
-                        closest = stronghold;
-                    }
+            spiral(center.getX(), center.getZ(), 6400, (x, z) -> {
+                if (CubiomesHeaders.getBiomeAt(generator, 1, x, 63, z) != biome) {
+                    return false;
                 }
-                BPos dimPos = closest.toBlockPos().add(9, 0, 9);
-                return new BPos(dimPos.getX(), 0, dimPos.getZ());
-            } else if (structure instanceof Mineshaft mineshaft) {
-                SpiralIterator<CPos> spiralIterator = new SpiralIterator<>(new CPos(center.getX() >> 4, center.getZ() >> 4), new CPos(radius, radius), (x, y, z) -> new CPos(x, z));
-
-                return StreamSupport.stream(spiralIterator.spliterator(), false)
-                    .filter(cPos -> {
-                        Feature.Data<Mineshaft> data = mineshaft.at(cPos.getX(), cPos.getZ());
-                        return data.testStart(source.getWorldSeed(), chunkRand) && data.testBiome(source) && data.testGenerate(terrainGenerator);
-                    })
-                    .findAny().map(cPos -> cPos.toBlockPos().add(9, 0, 9)).orElse(null);
-            }
-        }
-        return null;
-    }
-
-    private static int locateDecorator(CustomClientCommandSource source, FeatureFactory<? extends Decorator<?, ?>> decoratorFactory) throws CommandSyntaxException {
-        final Decorator<?, ?> decorator = decoratorFactory.create(source.getVersion());
-
-        BiomeSource biomeSource = BiomeSource.of(source.getDimension(), source.getVersion(), source.getSeed().getSecond());
-        if (!decorator.isValidDimension(biomeSource.getDimension())) {
-            throw INVALID_DIMENSION_EXCEPTION.create();
-        }
-
-        BlockPos center = BlockPos.containing(source.getPosition());
-        BPos decoratorPos = locateDecorator(decorator, new BPos(center.getX(), center.getY(), center.getZ()).toChunkPos(), 6400, biomeSource, new ChunkRand());
-
-        if (decoratorPos == null) {
-            source.sendFeedback(Component.translatable("command.locate.feature.decorator.noneFound", decorator.getName()));
-        } else {
-            source.sendFeedback(chain(
-                highlight(Component.translatable("command.locate.feature.decorator.foundAt", decorator.getName())),
-                highlight(" "),
-                copy(
-                    hover(
-                        accent("x: " + decoratorPos.getX() + ", z: " + decoratorPos.getZ()),
-                        base(Component.translatable("command.locate.feature.decorator.copy", decorator.getName()))
+                source.sendFeedback(chain(
+                    highlight(Component.translatable("command.locate.biome.foundAt")),
+                    highlight(" "),
+                    copy(
+                        hover(
+                            accent("x: %d, z: %d".formatted(x, z)),
+                            base(Component.translatable("chat.copy.click"))
+                        ),
+                        "%d ~ %d".formatted(x, z)
                     ),
-                    String.format("%d ~ %d", decoratorPos.getX(), decoratorPos.getZ())
-                ),
-                highlight(".")
-            ));
+                    highlight(".")
+                ));
+                return true;
+            }, CommandExceptions.NO_BIOME_FOUND_EXCEPTION::create);
+            return Command.SINGLE_SUCCESS;
         }
-        return Command.SINGLE_SUCCESS;
     }
 
-    private static BPos locateDecorator(Decorator<?, ?> decorator, CPos center, int radius, BiomeSource source, ChunkRand chunkRand) {
-        long structureSeed = WorldSeed.toStructureSeed(source.getWorldSeed());
-        if (decorator instanceof DesertWell desertWell) {
-            SpiralIterator<CPos> spiralIterator = new SpiralIterator<>(center, new CPos(radius, radius), (x, y, z) -> new CPos(x, z));
-            return StreamSupport.stream(spiralIterator.spliterator(), false)
-                .filter(cPos -> {
-                    int chunkX = cPos.getX();
-                    int chunkZ = cPos.getZ();
-                    DesertWell.Data data = desertWell.getData(structureSeed, chunkX, chunkZ, chunkRand);
-                    return data != null && desertWell.canSpawn(chunkX, chunkZ, source);
-                })
-                .findAny().map(cPos -> cPos.toBlockPos().add(9, 0, 9)).orElse(null);
-        } else if (decorator instanceof EndGateway endGateway) {
-            SpiralIterator<CPos> spiralIterator = new SpiralIterator<>(center, new CPos(radius, radius), (x, y, z) -> new CPos(x, z));
-            for (CPos cPos : spiralIterator) {
-                int chunkX = cPos.getX();
-                int chunkZ = cPos.getZ();
-                EndGateway.Data data = endGateway.getData(structureSeed, chunkX, chunkZ, chunkRand);
-                if (data == null) {
-                    continue;
-                }
-                if (endGateway.canSpawn(chunkX, chunkZ, source)) {
-                    return new BPos(data.blockX, 0, data.blockZ);
-                }
+    private static int locateStructure(CustomClientCommandSource source, int structure) throws CommandSyntaxException {
+        try (Arena arena = Arena.ofConfined()) {
+            int version = source.getVersion();
+            MemorySegment structureConfig = StructureConfig.allocate(arena);
+            int config = CubiomesHeaders.getStructureConfig(structure, version, structureConfig);
+            if (config == 0) {
+                throw CommandExceptions.INCOMPATIBLE_PARAMETERS_EXCEPTION.create();
             }
+            long seed = source.getSeed().getSecond();
+
+            MemorySegment generator = Generator.allocate(arena);
+            CubiomesHeaders.setupGenerator(generator, version, 0);
+            CubiomesHeaders.applySeed(generator, source.getDimension(), seed);
+
+            BlockPos center = BlockPos.containing(source.getPosition());
+            int regionSize = StructureConfig.regionSize(structureConfig) << 4;
+            spiral(center.getX() / regionSize, center.getZ() / regionSize, Level.MAX_LEVEL_SIZE / regionSize, (x, z) -> {
+                MemorySegment structurePos = Pos.allocate(arena);
+                int valid = CubiomesHeaders.getStructurePos(structure, version, seed, x, z, structurePos);
+                if (valid == 0) {
+                    return false;
+                }
+                if (CubiomesHeaders.isViableStructurePos(structure, generator, Pos.x(structurePos), Pos.z(structurePos), 0) == 0) {
+                    return false;
+                }
+                source.sendFeedback(chain(
+                    highlight(Component.translatable("command.locate.feature.structure.foundAt")),
+                    highlight(" "),
+                    copy(
+                        hover(
+                            accent("x: %d, z: %d".formatted(Pos.x(structurePos), Pos.z(structurePos))),
+                            base(Component.translatable("chat.copy.click"))
+                        ),
+                        "%d ~ %d".formatted(Pos.x(structurePos), Pos.z(structurePos))
+                    ),
+                    highlight(".")
+                ));
+                return true;
+            }, CommandExceptions.NO_STRUCTURE_FOUND_EXCEPTION::create);
+            return Command.SINGLE_SUCCESS;
         }
-        return null;
     }
 
     private static int locateSlimeChunk(CustomClientCommandSource source) throws CommandSyntaxException {
-        BlockPos center = BlockPos.containing(source.getPosition());
-        CPos centerChunk = new CPos(center.getX() >> 4, center.getZ() >> 4);
-
-        CPos slimeChunkPos = locateSlimeChunk(new SlimeChunk(source.getVersion()), centerChunk, 6400, source.getSeed().getSecond(), new ChunkRand(), source.getDimension());
-        if (slimeChunkPos == null) {
-            source.sendFeedback(Component.translatable("command.locate.feature.slimeChunk.noneFound"));
-        } else {
-            int x = (slimeChunkPos.getX() << 4) + 9;
-            int z = (slimeChunkPos.getZ() << 4) + 9;
-            source.sendFeedback(chain(
-                highlight(Component.translatable("command.locate.feature.slimeChunk.foundAt")),
-                highlight(" "),
-                copy(
-                    hover(
-                        accent("x: " + x + ", z: " + z),
-                        base(Component.translatable("command.locate.feature.slimeChunk.copy"))
-                    ),
-                    String.format("%d ~ %d", x, z)
-                ),
-                highlight(" ("),
-                highlight(Component.translatable("command.locate.feature.slimeChunk.chunk")),
-                highlight(" "),
-                copy(
-                    hover(
-                        accent(slimeChunkPos.getX() + " " + slimeChunkPos.getZ()),
-                        base(Component.translatable("command.locate.feature.slimeChunk.copyChunk"))
-                    ),
-                    String.format("%d %d", slimeChunkPos.getX(), slimeChunkPos.getZ())
-                ),
-                highlight(").")
-            ));
+        if (source.getDimension() != CubiomesHeaders.DIM_OVERWORLD()) {
+            throw CommandExceptions.INVALID_DIMENSION_EXCEPTION.create();
         }
-        return Command.SINGLE_SUCCESS;
-    }
-
-    private static CPos locateSlimeChunk(SlimeChunk slimeChunk, CPos centerChunk, int radius, long seed, ChunkRand rand, Dimension dimension) throws CommandSyntaxException {
-        if (!slimeChunk.isValidDimension(dimension)) {
-            throw INVALID_DIMENSION_EXCEPTION.create();
-        }
-        SpiralIterator<CPos> spiralIterator = new SpiralIterator<>(centerChunk, new CPos(radius, radius), (x, y, z) -> new CPos(x, z));
-        return StreamSupport.stream(spiralIterator.spliterator(), false)
-            .filter(cPos -> {
-                SlimeChunk.Data data = slimeChunk.at(cPos.getX(), cPos.getZ(), true);
-                return data.testStart(seed, rand);
-            })
-            .findAny().orElse(null);
-    }
-
-    private static int locateLoot(CustomClientCommandSource source, int amount, Pair<String, Predicate<Item>> item) throws CommandSyntaxException {
-        Dimension dimension = source.getDimension();
-
-        String itemString = item.getFirst();
-
-        Set<RegionStructure<?, ?>> lootableStructures = Features.getStructuresForVersion(source.getVersion()).stream()
-            .filter(structure -> structure instanceof ILoot)
-            .filter(structure -> structure.isValidDimension(dimension))
-            .map(structure -> (RegionStructure<?, ?>) structure)
-            .collect(Collectors.toSet());
-
-        BiomeSource biomeSource = BiomeSource.of(dimension, source.getVersion(), source.getSeed().getSecond());
-
-        BlockPos center = BlockPos.containing(source.getPosition());
-
-        List<BPos> lootPositions = locateLoot(item.getSecond(), i -> i.getName().equals(itemString), amount, new BPos(center.getX(), center.getY(), center.getZ()), new ChunkRand(), biomeSource, lootableStructures);
-        if (lootPositions == null || lootPositions.isEmpty()) {
-            source.sendFeedback(Component.translatable("command.locate.loot.noneFound", itemString));
-        } else {
-            source.sendFeedback(chain(
-                highlight(Component.translatable("command.locate.loot.foundAt", amount, itemString)),
-                highlight(" "),
-                join(highlight(", "), lootPositions.stream().map(bPos ->
+        long seed = source.getSeed().getSecond();
+        ChunkPos center = new ChunkPos(BlockPos.containing(source.getPosition()));
+        spiral(center.x, center.z, 6400, (x, z) -> {
+            RandomSource random = WorldgenRandom.seedSlimeChunk(x, z, seed, 987234911L);
+            if (random.nextInt(2147483640) % 10 == 0) {
+                int blockPosX = (x << 4) + 9;
+                int blockPosZ = (z << 4) + 9;
+                source.sendFeedback(chain(
+                    highlight(Component.translatable("command.locate.feature.slimeChunk.foundAt")),
+                    highlight(" "),
                     copy(
                         hover(
-                            accent("x: " + bPos.getX() + ", z: " + bPos.getZ()),
-                            base(Component.translatable("command.locate.loot.copy", itemString))
+                            accent("x: %d, z: %d".formatted(blockPosX, blockPosZ)),
+                            base(Component.translatable("command.locate.feature.slimeChunk.copy"))
                         ),
-                        String.format("%d ~ %d", bPos.getX(), bPos.getZ())
-                    )
-                ).collect(Collectors.toList())),
-                highlight(".")
-            ));
-        }
+                        "%d ~ %d".formatted(blockPosX, blockPosZ)
+                    ),
+                    highlight(" ("),
+                    highlight(Component.translatable("command.locate.feature.slimeChunk.chunk")),
+                    highlight(" "),
+                    copy(
+                        hover(
+                            accent(x + " " + z),
+                            base(Component.translatable("command.locate.feature.slimeChunk.copyChunk"))
+                        ),
+                        "%d %d".formatted(x, z)
+                    ),
+                    highlight(").")
+                ));
+                return true;
+            }
+            return false;
+        }, CommandSyntaxException.BUILT_IN_EXCEPTIONS.dispatcherUnknownCommand()::create);
         return Command.SINGLE_SUCCESS;
     }
 
-    private static List<BPos> locateLoot(Predicate<Item> item, Predicate<Item> nameEquals, int amount, BPos center, ChunkRand chunkRand, BiomeSource biomeSource, Set<RegionStructure<?, ?>> structures) {
-        TerrainGenerator terrainGenerator = TerrainGenerator.of(biomeSource);
-
-        int itemsFound = 0;
-        List<BPos> positions = new ArrayList<>();
-        List<Triplet<? extends RegionStructure<?, ?>, Generator, Iterator<RPos>>> structureInfo = new ArrayList<>();
-        for (RegionStructure<?, ?> structure : structures) {
-            Generator.GeneratorFactory<?> factory;
-            if (structure instanceof RuinedPortal) {
-                factory = Generators.get(RuinedPortal.class);
-            } else {
-                factory = Generators.get(structure.getClass());
+    private static void spiral(final int centerX, final int centerZ, final int radius, CoordinateCallback callback, Supplier<? extends CommandSyntaxException> failure) throws CommandSyntaxException {
+        int x = centerX, dx = 0, z = centerZ, dz = -1;
+        final int leftBoundX = centerX - radius, rightBoundX = centerX + radius;
+        final int bottomBoundZ = centerZ - radius, topBoundZ = centerZ + radius;
+        final int max = (2 * radius) * (2 * radius);
+        for (int i = 0; i < max ; i++) {
+            if (leftBoundX <= x && x <= rightBoundX && bottomBoundZ <= z && z <= topBoundZ) {
+                if (callback.consume(x, z)) {
+                    return;
+                }
             }
-            if (factory == null) {
-                continue;
+            if (x - centerX == z - centerZ || (x < centerX && x - centerX == centerZ - z) || (x > centerX && x - centerX == centerZ + 1 - z)) {
+                final int temp = dx;
+                dx = -dz;
+                dz = temp;
             }
-            Generator structureGenerator = factory.create(biomeSource.getVersion());
-            if (structureGenerator.getPossibleLootItems().stream().noneMatch(nameEquals)) {
-                continue;
-            }
-
-            int chunkInRegion = structure.getSpacing();
-            int regionSize = chunkInRegion * 16;
-            final int border = Level.MAX_LEVEL_SIZE;
-            Iterator<RPos> iterator = new SpiralIterator<>(center.toRegionPos(regionSize), new BPos(-border, 0, -border).toRegionPos(regionSize), new BPos(border, 0, border).toRegionPos(regionSize), 1, (x, y, z) -> new RPos(x, z, regionSize)).iterator();
-            structureInfo.add(new Triplet<>(structure, structureGenerator, iterator));
+            x += dx;
+            z += dz;
         }
+        throw failure.get();
+    }
 
-        Iterable<Triplet<? extends RegionStructure<?, ?>, Generator, Iterator<RPos>>> cycle = Iterables.cycle(structureInfo);
-        cycle: for (Triplet<? extends RegionStructure<?, ?>, Generator, Iterator<RPos>> info : cycle) {
-            RegionStructure<?, ?> structure = info.getFirst();
-            Generator generator = info.getSecond();
-            Iterator<RPos> iterator = info.getThird();
-
-            while (iterator.hasNext()) {
-                RPos rPos = iterator.next();
-                CPos cPos = structure.getInRegion(biomeSource.getWorldSeed(), rPos.getX(), rPos.getZ(), chunkRand);
-                if (cPos == null) {
-                    continue;
-                }
-                if (!structure.canSpawn(cPos, biomeSource)) {
-                    continue;
-                }
-                if (terrainGenerator != null && !structure.canGenerate(cPos, terrainGenerator)) {
-                    continue;
-                }
-                if (!generator.generate(terrainGenerator, cPos, chunkRand)) {
-                    continue;
-                }
-                List<ChestContent> loot = ((ILoot) structure).getLoot(WorldSeed.toStructureSeed(biomeSource.getWorldSeed()), generator, chunkRand, false);
-                int matchedItems = loot.stream().mapToInt(chest -> chest.getCount(item)).sum();
-                if (matchedItems == 0) {
-                    continue;
-                }
-                itemsFound += matchedItems;
-                positions.add(cPos.toBlockPos().add(9, 0, 9));
-                if (itemsFound >= amount) {
-                    return positions;
-                }
-                continue cycle;
-            }
-        }
-        return null;
+    @FunctionalInterface
+    private interface CoordinateCallback {
+        boolean consume(int x, int z);
     }
 }
